// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown Test should render correctly 1`] = `
<View
  style={null}
>
  <Styled(Text)
    isFocused={true}
  >
    foo
  </Styled(Text)>
  <Styled(TouchableOpacity)
    arrowImageStyle={null}
    bounces={true}
    data={
      Array [
        Object {
          "label": "foo",
          "value": "foo",
        },
      ]
    }
    dropDownItemFontWeight="semibold"
    dropDownStyle={null}
    heading="foo"
    isAnimateList={true}
    itemStyle={
      Object {
        "color": "foo",
      }
    }
    onPress={[Function]}
    onValueChange={[MockFunction]}
    openDropdownOnLoad={false}
    pointerEvents="auto"
    selectedItemFontWeight="semibold"
    selectedValue="foo"
    variation="primary"
  >
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="gray.800"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text="foo"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
    <Image
      alt=""
      source={
        Object {
          "testUri": "../../../../core/src/assets/carrot-small-down.png",
        }
      }
      style={null}
    />
  </Styled(TouchableOpacity)>
  <Component
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <Styled(TouchableOpacity)
      accessibilityLabel="Tap to close it"
      accessibilityRole="none"
      accessible={true}
      activeOpacity={1}
      height={1334}
      left={0}
      onPress={[Function]}
      paddingTop={0}
    >
      <Styled(View)
        top={0}
        width={0}
      >
        <Styled(View)
          height={0}
          width={0}
        />
      </Styled(View)>
    </Styled(TouchableOpacity)>
  </Component>
</View>
`;

exports[`DropDown Test should render with dropdown open state 1`] = `
<View
  style={null}
>
  <Styled(Text)
    isFocused={true}
  >
    foo
  </Styled(Text)>
  <Styled(TouchableOpacity)
    arrowImageStyle={null}
    bounces={true}
    data={
      Array [
        Object {
          "label": "foo",
          "value": "foo",
        },
      ]
    }
    dropDownItemFontWeight="semibold"
    dropDownStyle={null}
    heading="foo"
    isAnimateList={true}
    itemStyle={
      Object {
        "color": "foo",
      }
    }
    onPress={[Function]}
    onValueChange={[MockFunction]}
    openDropdownOnLoad={false}
    pointerEvents="auto"
    selectedItemFontWeight="semibold"
    selectedValue="foo"
    variation="primary"
  >
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="gray.800"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text="foo"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
    <Image
      alt=""
      source={
        Object {
          "testUri": "../../../../core/src/assets/carrot-small-up.png",
        }
      }
      style={null}
    />
  </Styled(TouchableOpacity)>
  <Component
    hardwareAccelerated={false}
    transparent={true}
    visible={true}
  >
    <Styled(TouchableOpacity)
      accessibilityLabel="Tap to close it"
      accessibilityRole="none"
      accessible={true}
      activeOpacity={1}
      height={1334}
      left={0}
      onPress={[Function]}
      paddingTop={0}
    >
      <Styled(View)
        top={0}
        width={0}
      >
        <Styled(View)
          height={0}
          width={0}
        >
          <Styled(FlatList)
            ItemSeparatorComponent={[Function]}
            bounces={true}
            data={
              Array [
                Object {
                  "label": "foo",
                  "value": "foo",
                },
              ]
            }
            keyExtractor={[Function]}
            renderItem={[Function]}
            style={
              Object {
                "height": 0,
              }
            }
          />
        </Styled(View)>
      </Styled(View)>
    </Styled(TouchableOpacity)>
  </Component>
</View>
`;
